--- a/catalog/templates/renew_book.html
+++ b/catalog/templates/renew_book.html
@@ -7,11 +7,20 @@
 <p>Language: {{book.language}}</p>
 <p>Borrower: {{book.borrower}}</p>
 <p>Due back: {{book.due_back}}</p>
-<form action="" method="post">
+<form id="form-id" action="" method="post">
   {% csrf_token %}
   <table>
     {{ form.as_table }}
   </table>
-  <input type="submit" name="submit" value="Submit">
+  <button class="g-recaptcha" 
+        data-sitekey="6LeqpQErAAAAAEm7myIYKlsUDWEWpLn8DXWpfh_X" 
+        data-callback='onSubmit' 
+        data-action='submit'>Submit</button>
 </form>
+<script src="https://www.google.com/recaptcha/api.js"></script>
+<script>
+   function onSubmit(token) {
+     document.getElementById("form-id").submit();
+   }
+ </script>
 {% endblock %}
